# TOOLS_BI

./: .env  .env.example  .gitignore  .webhook_uuid.txt  BACKEND_README.md  CONTRIBUTING.md  PERFORMANCE_TEST.md  README.md  SECURITY.md  TECHNICAL_SPECS.md  build-log.txt  build-log2.txt  build_err.txt  capacitor.config.ts  desktopprd.md  fix.js  fix2.js  index.html  lint-results.txt  lint.txt  mobileIOSprd.md  mobileandroidprd.md  package-lock.json  package.json  tailwind.config.ts  task.md  test_agg.go  test_chart.cjs  test_chart.mjs  test_upload.mjs  tsc_output.txt  tsconfig.app.json  vite.config.ts  webhook_response.json
.github/workflows/: ci.yml  release.yml  security.yml
android/: capacitor.settings.gradle
android/app/: build.gradle  capacitor.build.gradle
datalens-backend/: .env  .env.example  Dockerfile  fix_db.go  go.mod  go.sum  test_data.csv
datalens-backend/scripts/: smoke_test.sh
desktop/src-tauri/: .sentinel_salt  .sentinel_vault.hold  Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: lib.rs
docs/security/: AUDIT_2026-04-28.md
neuradash-backend/: Makefile  README.md  docker-compose.yml  go.mod  go.sum  gqlgen.yml
scripts/: extract-renderer.cjs  extract-renderer.js  refactor-dashboard.cjs
src/: App.tsx  index.css
src/components/: AIChatPanel.tsx  AppInitializer.tsx  ChartRenderer.tsx  ChartTypeSelector.tsx  DashboardViewer.tsx  ReportHistory.tsx  RichTextEditor.tsx  SlideBuilder.tsx  StoryEditor.tsx  TextEditorModal.tsx  ThemeProvider.tsx  Updater.tsx  (+1 more)
(+256 files in other folders)
